<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.JuanCristobalJavier.applaescalera.TerminosFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="@dimen/paddinTerminos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/tvTitulo1"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/Resource22dp"
                android:textStyle="bold"
                android:text="@string/titulo1"/>
            <TextView
                android:id="@+id/tvTitulo2"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/Resource22dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/Resource20dp"
                android:text="@string/titulo2"/>
            <TextView
                android:id="@+id/tvTextoTitulo"
                android:textSize="@dimen/Resource15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/Resource20dp"
                android:text="@string/textoTitulo"/>
            <TextView
                android:id="@+id/tvLicencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/Resource20dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/Resource20dp"
                android:text="@string/licencia"/>
            <TextView
                android:id="@+id/tvTextoLicencia"
                android:textSize="@dimen/Resource15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/Resource20dp"
                android:text="@string/textoLicencia"/>
            <TextView
                android:id="@+id/tvNoAutorizado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/Resource20dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/Resource20dp"
                android:text="@string/noAutorizado"/>
            <TextView
                android:id="@+id/tvTextoNoAutorizado"
                android:textSize="@dimen/Resource15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/Resource20dp"
                android:text="@string/textoNoAutorizado"/>
            <TextView
                android:id="@+id/tvPropiedad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/Resource20dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/Resource20dp"
                android:text="@string/propiedad"/>
            <TextView
                android:id="@+id/tvTextoPropiedad"
                android:textSize="@dimen/Resource15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/Resource20dp"
                android:text="@string/textoPropiedad"/>

            <TextView
                android:id="@+id/tvFraude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/Resource20dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/Resource20dp"
                android:text="@string/antifraude"/>
            <TextView
                android:id="@+id/tvTextoFraude"
                android:textSize="@dimen/Resource15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/Resource20dp"
                android:text="@string/textoFraude"/>
            <TextView
                android:id="@+id/tvPrivacidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/Resource20dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/Resource20dp"
                android:text="@string/privacidad"/>
            <TextView
                android:id="@+id/tvTextoPrivacidad"
                android:textSize="@dimen/Resource15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/Resource20dp"
                android:text="@string/textoPrivacidad"/>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
