<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_Principal"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Principal" />

        <item
            android:id="@+id/nav_cuenta"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/drawerCuenta" />
    </group>

    <item android:title="Contacto">
        <menu>

            <item
                android:id="@+id/nav_terminos"
                android:title="@string/drawerterminos"
                />
            <item
                android:id="@+id/nav_ayuda"
                android:title="@string/drawerayuda"
                />
            <item
                android:id="@+id/nav_logout"
                android:title="Salir"
            />
        </menu>
    </item>

</menu>
