<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idGlobal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.a21639999.applaescalera.SplashScreen">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:alpha="0.7"
        android:scaleType="centerCrop"
        android:scaleY="-1"
        android:src="@drawable/fondo4" />

    <ImageView
        android:id="@+id/idAguacate"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:rotation="90"

        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/idTittleSplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/txtSplash"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
  />

    <TextView
        android:id="@+id/idTittleSplash2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/idTittleSplash"
        android:layout_alignBottom="@+id/idTittleSplash"
        android:layout_toEndOf="@+id/idTittleSplash"
        android:layout_toRightOf="@+id/idTittleSplash"
        android:text="@string/txtSplash1"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
    />

    <TextView
        android:id="@+id/idWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="43dp"
        android:text="@string/txtWelcome"
        android:textAlignment="center"
        android:textColor="@android:color/background_light" />
</RelativeLayout>
